# SCoRE

./: .gitignore  LICENSE  MANIFEST.in  README.md  SCoRE.py  demo.ipynb  pyproject.toml  setup.py  utility.py
SCoRE/: SCoRE.py  __init__.py  utility.py
applications/drug/: create_shift.ipynb  mdr.py  mdr_w.py  modelpred.py  sascorer.py  sdr.py  sdr_w.py
applications/icu/: mdr.py  sdr.py  train_f.ipynb
applications/llm/: mdr.py  sdr.py
simulation/: mdr.py  mdr_conc.py  mdr_ltt.py  mdr_naive.py  run_conc.ps1  run_conc_sdr.ps1  sdr.py  sdr_conc.py  sdr_ltt.py  test.ipynb
simulation_w/: mdr.py  sdr.py
tests/: test_public_api.py  test_score_api.py
