[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "score-select"
version = "0.1.1"
description = "Conformal selective prediction with general risk control."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tian Bai", email = "20.t.bai.05@gmail.com" },
    { name = "Ying Jin", email = "yjinstat@wharton.upenn.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "conformal prediction",
    "selective prediction",
    "risk control",
]
dependencies = [
    "numpy>=1.23",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
experiments = [
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "scipy>=1.9",
    "tqdm>=4.64",
]
dev = [
    "build>=1.2",
    "pytest>=7",
    "twine>=5",
]

[tool.setuptools.packages.find]
include = ["SCoRE*"]
exclude = ["applications*", "simulation*", "simulation_w*"]

[project.urls]
Repository = "https://github.com/Tian-Bai/SCoRE"
Paper = "https://arxiv.org/abs/2603.24704"

[tool.pytest.ini_options]
testpaths = ["tests"]
